--- a/index copy.html
+++ b/index copy.html
@@ -18,18 +18,26 @@
         <div style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Loading, please wait...</div>
         </div>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
+        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
+        gesture-detector>
         <a-assets>
-            <a-asset-item id="1" src="tree.gltf"></a-asset-item>
+        <a-asset-item id="1" src="tree.gltf"></a-asset-item>
         </a-assets>
-        <a-scene arjs>
-            <a-marker preset="hiro">
-              <a-entity position="0 0 0" scale="0.1 0.1 0.1">
-                <a-entity position=""   scale="1" gltfmodel="#1">
-                </a-entity>
-              </a-entity>
-            </a-marker>
-            <a-entity camera look-controls position="0 0 0"></a-entity>
-          <a-scene>
+        <a-marker id="animated-marker" type='barcode' value='1'  raycaster="objects: .clickable"
+        emitevents="true"
+        cursor="fuse: false; rayOrigin: mouse;"
+        smooth="true">
+        <a-entity
+        gltf-model="#1"
+        scale="1 1 1" 
+        position="0 0 0" 
+        class="clickable"
+        gesture-handler="minScale: 0.25; maxScale: 10" 
+        rotation="0 0 0">
+        </a-entity>
+        </a-marker>
+        <a-entity camera></a-entity>
+        </a-scene>
 
 </body>
 </html>
