--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a-scene arjs>
             <a-marker preset="hiro">
               <a-entity position="0 0 0" scale="0.1 0.1 0.1">
-                <a-entity position=""   scale="1" gltfmodel="#1">
+                <a-entity position=""   scale="1" gltfmodel="https://raw.githubusercontent.com/pedrovelasquez9/ARJS-example/main/tie.glb">
                 </a-entity>
               </a-entity>
             </a-marker>
