--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
         <div style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Loading, please wait...</div>
         </div>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-assets>
-            <a-asset-item id="1" src="tree.gltf"></a-asset-item>
-        </a-assets>
         <a-scene arjs>
             <a-marker preset="hiro">
               <a-entity position="0 0 0" scale="0.1 0.1 0.1">
-                <a-entity position=""   scale="1" gltfmodel="https://raw.githubusercontent.com/pedrovelasquez9/ARJS-example/main/tie.glb">
+                <a-entity position="0 0 0"   scale="1" gltf-model="https://raw.githubusercontent.com/pedrovelasquez9/ARJS-example/main/tie.glb">
                 </a-entity>
               </a-entity>
             </a-marker>
