--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <head>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
-    <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>   
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>AR test </title>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
@@ -18,12 +14,15 @@
         <div style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Loading, please wait...</div>
         </div>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene arjs>
+        <a-scene embedded arjs>
             <a-marker preset="hiro">
-              <a-entity position="0 0 0" scale="0.1 0.1 0.1">
-                <a-entity position="0 0 0"   scale="1" gltf-model="https://raw.githubusercontent.com/pedrovelasquez9/ARJS-example/main/tie.glb">
-                </a-entity>
+              <a-entity 
+                position="0 0 0" 
+                scale="0.1 0.1 0.1"
+                rotation="-90 0 0"
+                gltf-model="panda.gltf">
               </a-entity>
+
             </a-marker>
             <a-entity camera look-controls position="0 0 0"></a-entity>
           <a-scene>
