--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 position="0 0 0" 
                 scale="0.1 0.1 0.1"
                 rotation="-90 0 0"
-                gltf-model="panda.gltf">
+                gltf-model="models/panda.gltf">
               </a-entity>
 
             </a-marker>
