--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 
 </head>
 <body>
+    <div class="arjs-loader">
+        <div style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Loading, please wait...</div>
+        </div>
+        <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded arjs>
             <a-marker preset="hiro">
               <a-entity 
                 position="0 0.5 0" 
                 scale="0.5 0.5 0.5"
                 rotation="-90 0 0"
-                gltf-model="/models/panda.gltf">
+                gltf-model="models/panda.gltf">
               </a-entity>
 
             </a-marker>
