--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </a-entity>
 
             </a-marker>
-            <a-entity camera></a-entity>
+            <a-entity camera look-controls position="0 0 0"></a-entity>
           <a-scene>
 
 </body>
