--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>AR test </title>
-
+    <meta charset="utf-8">
+    <title>AR.js Web App</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.3.0/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
-
-        <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene embedded arjs>
-            <a-marker preset="hiro">
-              <a-entity 
-                position="0 0.5 0" 
-                scale="0.5 0.5 0.5"
-                rotation="-90 0 0"
-                gltf-model="models/panda.gltf">
-              </a-entity>
-
-            </a-marker>
-            <a-entity camera look-controls position="0 0 0"></a-entity>
-          <a-scene>
-
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+        <!-- Definir un marcador (código QR) -->
+        <a-marker preset="hiro">
+            <!-- Contenido que se mostrará cuando se detecte el marcador -->
+            <a-box position="0 0.5 0" material="color: #FF5733;"></a-box>
+            <a-text value="Ejemplo de AR.js" position="0 -1 0" scale="2 2 2" color="white"></a-text>
+        </a-marker>
+        <!-- Agregar iluminación -->
+        <a-light type="ambient" position="2 4 -3"></a-light>
+        <a-light type="directional" position="1 1 1"></a-light>
+    </a-scene>
 </body>
 </html>
