--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
         <!-- Definir un marcador (código QR) -->
         <a-marker preset="hiro">
-            <!-- Contenido que se mostrará cuando se detecte el marcador -->
-            <a-box position="0 0.5 0" material="color: #FF5733;"></a-box>
+            <!-- Cambia a tu modelo personalizado -->
+            <a-entity gltf-model="url(tree.gltf)"></a-entity>
             <a-text value="Ejemplo de AR.js" position="0 -1 0" scale="2 2 2" color="white"></a-text>
         </a-marker>
         <!-- Agregar iluminación -->
