--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Definir un marcador (código QR) -->
         <a-marker preset="hiro">
             <!-- Cambia a tu modelo personalizado -->
-            <a-entity gltf-model="tree.glt"></a-entity>
+            <a-entity gltf-model="tree.gltf"></a-entity>
             <a-text value="Ejemplo de AR.js" position="0 -1 0" scale="2 2 2" color="white"></a-text>
         </a-marker>
         <!-- Agregar iluminación -->
