--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <a-marker preset="hiro">
             <!-- Cambia a tu modelo personalizado -->
             <a-entity gltf-model="tree.gltf" position="0 0 0" scale=".1 .1 .1" ></a-entity>
-            <a-text value="Ejemplo de AR.js" position="0 -1 0" scale="2 2 2" color="white"></a-text>
+            <a-text value="www.evoke.games" position="0 0 0" 
+            scale="1 1 1" color="white" rotation="0 0 0"
+            ></a-text>
         </a-marker>
+        <a-entity camera></a-entity>
         <!-- Agregar iluminación -->
         <a-light type="ambient" position="2 4 -3"></a-light>
         <a-light type="directional" position="1 1 1"></a-light>
