--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             ></a-text>
         </a-marker>
         <a-entity camera></a-entity>
+        <a-animation attribute="rotation" dur="7000" to="0 360 0" easing="linear" repeat="indefinite">
+
         <!-- Agregar iluminación -->
         <a-light type="ambient" position="2 4 -3"></a-light>
         <a-light type="directional" position="1 1 1"></a-light>
