--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <!-- Definir un marcador (código QR) -->
         <a-marker preset="hiro">
             <!-- Cambia a tu modelo personalizado -->
-            <a-entity gltf-model="tree.gltf" position="0 0 0" scale=".1 .1 .1" ></a-entity>
+            <a-entity gltf-model="tree.gltf" position="0 0 0" scale=".1 .1 .1" >
+                <a-animation attribute="rotation" dur="7000" to="0 360 0" easing="linear" repeat="indefinite"></a-animation>
+            </a-entity>
             <a-text value="www.evoke.games" position="0 0 0" 
             scale="1 1 1" color="white" rotation="0 0 0"
             ></a-text>
-            <a-animation attribute="rotation" dur="7000" to="0 360 0" easing="linear" repeat="indefinite">
+            
 
         </a-marker>
         <a-entity camera></a-entity>
