--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <!-- Definir un marcador (código QR) -->
         <a-marker preset="hiro">
             <!-- Cambia a tu modelo personalizado -->
-            <a-entity material='color: red' gltf-model="laberinto.gltf" position="0 0 0" scale=".01 .01 .01" >
+            <a-entity gltf-model="laberinto.gltf" position="0 0 0" scale=".01 .01 .01" >
                 <a-animation attribute="rotation" dur="7000" to="0 360 0" easing="linear" repeat="indefinite"></a-animation>
             </a-entity>
-            <a-entity rotation="90 0 0">
+            <a-entity>
 
                 <a-text value="www.evoke.games" position="0 0 0" 
                 scale="1 1 1" color="white" rotation="0 0 0">
