--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <a-entity>
 
                 <a-text value="www.evoke.games" position="0 0 0" 
-                scale="1 1 1" color="white" rotation="0 0 0">
-                    <a-animation attribute="rotation" dur="7000" to="0 360 0" easing="linear" repeat="indefinite">
-                    </a-animation>
+                scale="1 1 1" color="white" rotation="0 0 0"
+                animation="property: rotation; dur: 3000; to: 0 360 0; loop: true">
+                   
+
                 </a-text>
             </a-entity>
 
