--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>AR.js Web App</title>
+    <title>Evoke ID</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -10,10 +10,7 @@
 <body>
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
         <!-- Definir un marcador (código QR) -->
-        <a-marker id="animated-marker" type='barcode' value='1'  raycaster="objects: .clickable"
-        emitevents="true"
-        cursor="fuse: false; rayOrigin: mouse;"
-        smooth="true">
+        <a-marker  type='barcode' value='1'>
             <!-- Cambia a tu modelo personalizado -->
             <a-entity 
                 gltf-model="laberinto.gltf" position="0 0 0" scale=".01 .01 .01" 
