--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 <body>
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
+    gesture-detector>">
+        
         <!-- Definir un marcador (código QR) -->
         <a-marker  type='barcode' value='1'>
             <!-- Cambia a tu modelo personalizado -->
