--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 <body>
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
-    gesture-detector>">
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;detectionMode: mono_and_matrix; matrixCodeType: 3x3;" gesture-detector>">
         
         <!-- Definir un marcador (código QR) -->
         <a-marker  type='barcode' value='1'>
