--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 <body>
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;detectionMode: mono_and_matrix; matrixCodeType: 3x3;" gesture-detector>">
-        
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;detectionMode: mono_and_matrix; matrixCodeType: 3x3;" gesture-detector>
+
         <!-- Definir un marcador (código QR) -->
         <a-marker  type='barcode' value='1'>
             <!-- Cambia a tu modelo personalizado -->
             <a-entity 
                 gltf-model="laberinto.gltf" position="0 0 0" scale=".01 .01 .01" 
-                animation="property: rotation; dur: 3000; to: 0 360 0; loop: true"></a-entity>>
+                animation="property: rotation; dur: 3000; to: 0 360 0; loop: true"></a-entity>
             </a-entity>
             <a-entity>
                 <a-text value="www.evoke.games" position="0 0 0" 
